--- a/Copy_of_DL0321EN_4_1_Comparing_Models_py_v1_0_(1).ipynb
+++ b/Copy_of_DL0321EN_4_1_Comparing_Models_py_v1_0_(1).ipynb
@@ -5814,7 +5814,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**The prediction is performed with the VGG16 trained model only in this part.**"
+        "**The prediction is performed with the VGG16 trained model in this part.**"
       ]
     },
     {
@@ -5831,16 +5831,6 @@
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "VNBO-pHniORg",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
-      ]
     },
     {
       "cell_type": "code",
@@ -5874,39 +5864,47 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mYf9Zc_bskPl",
+        "colab_type": "text"
+      },
+      "source": [
+        "**The prediction below is made with the ResNet50 model.**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "pyIyRdy2Ft-q",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "697fc16d-a999-41f9-a56e-9d705bb0567f"
       },
       "source": [
-        ""
+        "#Predict with ResNet model\n",
+        "filenames = test_generator.filenames\n",
+        "n_samples = len(filenames)\n",
+        "predict_2 = model.predict_generator(test_generator, steps= n_samples)\n",
+        "import numpy as np \n",
+        "predicted_class_indices_2 = np.argmax(predict_2, axis=1)\n",
+        "labels = (test_generator.class_indices)\n",
+        "print(predicted_class_indices_2[0:5])\n",
+        "print(labels)"
       ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "zJ5Dgv72Ft-v",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "gFkOmqqFFt-1",
-        "colab_type": "text"
-      },
-      "source": [
-        "  "
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0 1 0 0 1]\n",
+            "{'negative': 0, 'positive': 1}\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
